style.css
html, body {
    height: 100%;
    margin: 0;
}

body {
    background: #332f35;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

#mainContainer {
    top: 0;
    position: absolute;
    min-height: 100%;
    min-width: 100%;
}

.transformUp {
    transition-timing-function: ease-in;
    transition: 0.2s;
    transform: translateY(-200%);
}
.transformDown {
    transition-timing-function: ease-in;
    transition: 0.2s;
    transform: translateY(200%);
}
.transformBackIn {
    transition-timing-function: ease-in;
    transition: 0.2s;
    transform: translateY(0);
}

input[type=radio] {
    position: absolute;
    visibility: hidden;
    display: none;
}

.material-icons {
    color: #7FDBFF;
}
.material-icons.md-inactive,
.material-icons.md-dark.md-inactive {
    color: #9a929e;
}
.material-icons.md-dark {
    color: #004966;
}
label {
    color: #9a929e;
    display: inline-block;
    cursor: pointer;
    font-weight: bold;
    padding: 0 10px;
}

#radio-selectGroup {
    grid-column: 1;
}

#radio-selectNumber {
    grid-column: 2;
}
#menuContainer {
    display: grid;
    grid-template-columns: 50% 50%;
    justify-items: center;
    justify-content: space-around;
    align-items: center;
    top: 10px;
    position:relative;
    z-index: 999;
}
#footerContainer {
    bottom: 0;
    width: 100%;
    position:fixed;
}
#footerContainer i {
    margin: 10px 30px;
}
#footerGrid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    justify-items: center;
    justify-content: space-around;
    align-items: center;
    position:relative;
    z-index: 999;
}
ol {
    margin-left: -20px;
}
dd {
    margin-top: -1.6rem;
    margin-bottom: 1rem;
}
#helpContainerWrapper {
    top: 0;
    min-height: 100%; 
    min-width: 100%;
    background: transparent;
    display: none;
    position: fixed;
    z-index: 9999;
}

#helpContainer {
    transform: translate(0, 50%);

    background: #39363a;
    color: #9a929e;
    padding: 10px;
}
#toggle-help {
    grid-column: 2;
}
#toggle-fullscreen {
    grid-column: 3;
}
#toggle-vibration {
    grid-column: 1;
}
input[type=radio]:checked + label {
    color: #004966;
    background: #7FDBFF;
}
input[type=radio]:checked .material-icons {
    color: #004966;
}

#radio-selectNumber label {
    padding: 4px 10px;
}

.radio-group {
    border: solid 3px #675f6b;
    border-radius: 30px;
    overflow: hidden;
}

.touch {
    height: 80px;
    width: 80px;
    border-radius: 50%;
    position: absolute;
    transform: translate(-50%, -50%);
    font-size: 3rem;
    text-align: center;
}
.touch span {
    display: inline-block;
    position: relative;
    top: -55px;
}
.selectedTouch {
    height: 90px;
    width: 90px;
}

